# doc-benchmark

./: .coverage  .gitignore  ANSWERS.md  BACKLOG.md  BENCHMARK_SUMMARY.md  CLAUDE.md  CONTRIBUTING.md  DASHBOARD.md  E2E_TEST_REPORT.md  END_TO_END_WORKFLOW.md  FINAL_DECISIONS.md  FINAL_STATUS.md  IMPLEMENTATION_PLAN.md  MANUAL_TEST_PLAN.md  Makefile  NEXT_STEPS.md  NOTICE  ORCHESTRATOR.md  PHASE_0-1_COMPLETE.md  PHASE_2B_ACCEPTANCE_TESTING.md  PLAN_TASKS_4-5.md  README.md  RETRIEVAL_IMPROVEMENTS.md  STATUS.md  STATUS_UPDATE.md  TASK_CLARIFICATION.md  TASK_COMPLETION_REPORT.md  UNIFIED_IMPLEMENTATION_PLAN.md  benchmark.py  cli.py  compare_models.py  coverage.json  cr.md  dashboard.json  eval_code_tasks.py  extract_api_ground_truth.py  extract_ground_truth_from_repo.py  generate_baseline_report.py  generate_code_tasks.py  generate_final_summary.sh  (+13 more)
.github/: CODEOWNERS  (+1 more)
agent-benchmark/: BACKLOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  cli.py  intents.yaml  libraries.yaml  products.yaml  pyproject.toml  requirements.lock.txt
agent-benchmark/agent_benchmarks/: __main__.py  artifacts.py  cli.py  config.py  config_check.py  datasets_export.py  intents.py  llm.py  plugins.py  registry.py  schema_check.py
agent-benchmark/agent_benchmarks/agent_profiles/: __init__.py  loader.py
agent-benchmark/agent_benchmarks/commands/: __init__.py  answers.py  arms.py  benchmark.py  dashboard.py  dataset.py  evaluate.py  ingest.py  library.py  orchestrate.py  personas.py  questions.py  report.py  run.py
agent-benchmark/agent_benchmarks/dashboard/: __init__.py  markdown_renderer.py
agent-benchmark/agent_benchmarks/eval/: __init__.py  agent_runner.py  answerer.py  arm_runner.py  grounding.py  judge.py  panel.py  ragas_eval.py
agent-benchmark/agent_benchmarks/gate/: hard_gate.py  regression.py  soft_gate.py  trust_gate.py
agent-benchmark/agent_benchmarks/ingest/: docling_loader.py
agent-benchmark/agent_benchmarks/mcp/: mcp_protocol.py  url_client.py
agent-benchmark/agent_benchmarks/orchestrator/: pipeline.py
agent-benchmark/agent_benchmarks/personas/: analyzer.py  generator.py
agent-benchmark/agent_benchmarks/questions/: chunk_gen.py  llm_gen.py  normalizer.py  panel_reviewer.py  quality_analyzer.py  ragas_seed.py  refiner.py  validator.py
agent-benchmark/agent_benchmarks/report/: __init__.py  arms_report.py  generator.py  markdown_report.py  model_compare.py
agent-benchmark/agent_benchmarks/runner/: compare.py  manifest.py  run.py
agent-benchmark/agent_benchmarks/schemas/: answers.v1.json  arms.v1.json  eval.v1.json  questions.v1.json
agent-benchmark/agent_benchmarks/skills/: loader.py
agent-benchmark/agent_benchmarks/treatments/: __init__.py  arms.py  factory.py  tools.py
agent-benchmark/benchmarks/: spec.schema.json  spec.v1.yaml
agent-benchmark/config/: products.yaml
agent-benchmark/data/: README.md
agent-benchmark/data/questions/: dpnp_golden.json  intel_performance_skills_golden.json
agent-benchmark/docs/: README.md  adding-doc-source.md  architecture.md  benchmarking-and-comparison.md  contributing-metric.md  contributing-terminal-bench-task.md  difficulty-rubric.md  evaluating-treatments.md  example-execution.md  ingestion-docling.md  intel-performance-skills-evaluation-plan.md  intel-performance-skills-task-research.md  quickstart.md
agent-benchmark/docs/decisions/: 2026-02-12-review-devils-advocate.md  2026-02-12-review-intel-product.md  2026-02-14-context7-http-vs-mcp.md  2026-05-29-evaluating-mcp-skills-personas.md  2026-05-29-external-feedback-assessment.md  2026-06-10-artifacts-as-evaluation-subjects.md  2026-06-10-evaluation-beyond-mcp-docs.md  2026-06-10-model-harness-dimension.md  2026-06-10-questions-and-tasks-coverage-contract.md  2026-06-11-plugin-and-harness-aware-benchmarks.md  benchmark-methodology.md
agent-benchmark/scripts/: compare_models.py  compare_models_combined.py
agent-benchmark/terminal-bench-tasks/: COVERAGE.md  README.md
agent-benchmark/tests/: test_agent_runner.py  test_arm_runner.py  test_arms_report.py  test_artifacts.py  test_chunk_gen.py  test_compare_models_scripts.py  test_config_drift.py  test_critical_bands.py  test_dashboard.py  test_datasets_export.py  test_diagnoser.py  test_docling_loader.py  test_eval_answerer.py  test_eval_judge.py  test_eval_ragas.py  test_example_runner.py  test_grounding.py  test_hard_gate.py  test_intents.py  test_judge_panel.py  test_library_registry.py  test_llm_gen_extra.py  test_mcp_context7.py  test_mcp_factory.py  test_mcp_local_markdown.py  test_mcp_protocol.py  test_mcp_url_client.py  test_model_compare.py  test_normalizer.py  test_panel.py  test_personas_analyzer.py  test_personas_generator.py  test_product_registry.py  test_question_panel_reviewer.py  test_question_quality_analyzer.py  test_questions_llm_gen.py  test_questions_ragas.py  test_questions_validator.py  test_refiner.py  test_regression.py  (+8 more)
(+491 files in other folders)
